--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1>
 
     <meta charset="UTF-8">
 
@@ -56,7 +57,7 @@
 
             <h1>You're Going to Hire Me.</h1>
 
-            <p>Hello, my name is [INSERT NAME] I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
+            <p>Hello, my name is Geraldine Lewis-Wireman. I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
 
             <a href="#aboutme" class="btn">Learn More About Me</a>
 
@@ -68,7 +69,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="img/kitties.jpg" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
@@ -113,14 +114,35 @@
             </article>
 
         </main>
+        
     
     </section>
+    <h3>Contact us</h3>
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+            <label for="Name" class="fcf-label">Your name</label>
+            <div class="fcf-input-group">
+                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
+            </div>
+        <div class="fcf-form-group">
+            <label for="Email" class="fcf-label">Your Email</label>
+            <div class="fcf-input-group">
+                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
+            </div>
+        <div class="fcf-form-group">
+            <label for="Message" class="fcf-label">Your message</label>
+            <div class="fcf-input-group">
+                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+            </div>
+        </div>
+        <div class="fcf-form-group">
+            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
+        </div>
 
     <section class="footer-container">
 
         <footer class="footer-content">
 
-            <p>&copy; 2022 Code Louisville. This website maintained by: [YOUR NAME HERE]</p> 
+            <p>&copy; 2022 Code Louisville. This website maintained by: Geraldine Lewis-Wireman</p> 
 
         </footer>
 
