--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1>
+    <meta name="viewport" content="width-device-width, initial-scale=1>"
 
     <meta charset="UTF-8">
 
@@ -54,10 +54,11 @@
     <section class="hero-container" id="hero">
 
         <div class="hero-content">
+            
 
             <h1>You're Going to Hire Me.</h1>
 
-            <p>Hello, my name is Geraldine Lewis-Wireman. I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
+            <p>Hello, my name is Geraldine Lewis-Wireman I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
 
             <a href="#aboutme" class="btn">Learn More About Me</a>
 
@@ -69,7 +70,7 @@
 
         <div class="aboutme-content">
 
-            <img src="img/kitties.jpg" alt="Profile Photo" class="aboutme-photo">
+            <img src="img\kitties.jpg" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
